# reconlify-cli

./: .gitignore  CHANGELOG.md  CLAUDE_CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
architecture_snapshot/: 00_directory_tree.md  05_report_schema.md  07_e2e_structure.md
docs/: COLUMN_MAPPING_V1_1.md  PERF_TESTING.md  PRD_v1.md  RECONIFY_CLI_USER_GUIDE_v1.md  RECONLIFY_CLI_PRD_v1.md  RECONLIFY_CLI_USER_GUIDE_v1.md  REPORT_SCHEMA_v1.md  Reconify_CLI_PRD_v1.md  USER_GUIDE_v1.md  YAML_SCHEMA_v1.md
examples/: tabular_full.yaml  tabular_min.yaml  text_full.yaml  text_min.yaml
examples/data/: source.csv  target.csv
scripts/: make_snapshot.sh
scripts/perf/: gen_perf_fixtures.py  run_bench.py
src/reconify/: __init__.py  __main__.py  cli.py  config_loader.py  models.py  report.py  tabular_engine.py  text_engine.py
src/reconlify/: __init__.py  __main__.py  cli.py  config_loader.py  models.py  report.py  tabular_engine.py  text_engine.py
tests/: test_cli_smoke.py  test_models.py  test_report.py  test_tabular_engine.py  test_text_engine.py
tests/e2e/: README.md  conftest.py  test_column_mapping_e2e.py  test_tabular_e2e.py  test_text_e2e.py
tests/e2e/cases/tabular_column_mapping_basic_exit1/: config.yaml  source.csv  target.csv
tests/e2e/cases/tabular_column_mapping_invalid_target_exit2/: config.yaml  target.csv
tests/e2e/cases/tabular_column_mapping_normalization_exit0/: config.yaml  target.csv
tests/e2e/cases/tabular_column_mapping_normalization_mismatch_exit1/: source.csv  target.csv
tests/e2e/cases/tabular_column_mapping_string_rules_exit0/: config.yaml  source.csv  target.csv
tests/e2e/cases/tabular_column_mapping_tolerance_exit0/: config.yaml  source.csv  target.csv
tests/e2e/cases/tabular_column_stats_disabled_exit0/: config.yaml
tests/e2e/cases/tabular_compare_exclude_columns_exit0/: config.yaml  source.csv
tests/e2e/cases/tabular_compare_include_columns_exit0/: config.yaml  target.csv
tests/e2e/cases/tabular_compare_normalize_trim_case_exit0/: config.yaml  source.csv  target.csv
tests/e2e/cases/tabular_csv_delimiter_semicolon_exit0/: config.yaml  source.csv
tests/e2e/cases/tabular_csv_header_false_exit0/: config.yaml  target.csv
tests/e2e/cases/tabular_duplicate_keys_error/: source.csv  target.csv
tests/e2e/cases/tabular_exact_match/: config.yaml
tests/e2e/cases/tabular_exclude_keys/: config.yaml  target.csv
tests/e2e/cases/tabular_ignore_columns_exit0/: config.yaml  source.csv  target.csv
tests/e2e/cases/tabular_invalid_exclude_keys/: config.yaml  source.csv
tests/e2e/cases/tabular_invalid_row_filters_exit2/: config.yaml  target.csv
tests/e2e/cases/tabular_missing_detection_null_keys_exit1/: config.yaml  target.csv
tests/perf/: test_perf_smoke.py
(+71 files in other folders)
