[tool.poetry]
name = "reconify-cli"
version = "1.0.0"
description = "Local-first, rule-based data reconciliation CLI tool"
authors = []
packages = [{ include = "reconify", from = "src" }]

[tool.poetry.scripts]
reconify = "reconify.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.9,<1"
pydantic = "^2"
pyyaml = "^6"
duckdb = ">=0.9,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
ruff = ">=0.4,<1"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Allow function calls in argument defaults (Typer pattern)

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: End-to-end tests (invoke CLI as subprocess)"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
