[project]
name = "reconlify-cli"
version = "0.1.0"
description = "Local-first, rule-based semantic data reconciliation CLI tool"
authors = [
    { name = "Testute AB", email = "testuteab@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["reconciliation", "data-diff", "csv", "audit", "etl", "data-quality"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9,<1",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "duckdb>=0.9,<2",
]

[project.scripts]
reconlify = "reconlify.cli:app"

[project.urls]
Homepage = "https://github.com/testuteab/reconlify-cli"
Repository = "https://github.com/testuteab/reconlify-cli"
"Bug Tracker" = "https://github.com/testuteab/reconlify-cli/issues"
Changelog = "https://github.com/testuteab/reconlify-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/testuteab/reconlify-cli#readme"

[tool.poetry]
packages = [{ include = "reconlify", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
ruff = ">=0.4,<1"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Allow function calls in argument defaults (Typer pattern)

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests (invoke CLI as subprocess)",
    "perf: Performance tests (large generated fixtures; opt-in)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
